# handlers/article.go
@@ -16,9 +16,10 @@ import (
 // @Tags        articles
 // @Accept      json
 // @Produce     json
-// @Param       article body     models.CreateArticleModel true "article body"
-// @Success     201     {object} models.JSONResponse{data=models.Article}
-// @Failure     400     {object} models.JSONErrorResponce
+// @Param       article       body     models.CreateArticleModel true  "article body"
+// @Param       Authorization header   string                    false "authorization"
+// @Success     201           {object} models.JSONResponse{data=models.Article}
+// @Failure     400           {object} models.JSONErrorResponce
 // @Router      /v1/article [post]
 func (h handler) CreateArticle(c *gin.Context) {
 	var body models.CreateArticleModel
@@ -55,9 +56,10 @@ func (h handler) CreateArticle(c *gin.Context) {
 // @Tags        articles
 // @Accept      json
 // @Produce     json
-// @Param       id  path     string true "Article ID"
-// @Success     200 {object} models.JSONResponse{data=models.PackedArticleModel}
-// @Failure     400 {object} models.JSONErrorResponce
+// @Param       id            path     string true  "Article ID"
+// @Param       Authorization header   string false "authorization"
+// @Success     200           {object} models.JSONResponse{data=models.PackedArticleModel}
+// @Failure     400           {object} models.JSONErrorResponce
 // @Router      /v1/article/{id} [get]
 func (h handler) GetArticleById(c *gin.Context) {
 
@@ -85,10 +87,11 @@ func (h handler) GetArticleById(c *gin.Context) {
 // @Tags        articles
 // @Accept      json
 // @Produce     json
-// @Param       offset query    int     false "0"
-// @Param       limit  query    int     false "0"
-// @Param       search query    string  false "smth"
-// @Success     200    {object} models.JSONResponse{data=[]models.Article}
+// @Param       offset        query    int    false "0"
+// @Param       limit         query    int    false "0"
+// @Param       search        query    string false "smth"
+// @Param       Authorization header   string false "authorization"
+// @Success     200           {object} models.JSONResponse{data=[]models.Article}
 // @Router      /v1/article [get]
 func (h handler) GetArticleList(c *gin.Context) {
 
@@ -137,9 +140,10 @@ func (h handler) GetArticleList(c *gin.Context) {
 // @Tags        articles
 // @Accept      json
 // @Produce     json
-// @Param       article body     models.UpdateArticleModel true "article body"
-// @Success     200     {object} models.JSONResponse{data=[]models.Article}
-// @Failure     400     {object} models.JSONErrorResponce
+// @Param       article       body     models.UpdateArticleModel true  "article body"
+// @Param       Authorization header   string                    false "authorization"
+// @Success     200           {object} models.JSONResponse{data=[]models.Article}
+// @Failure     400           {object} models.JSONErrorResponce
 // @Router      /v1/article [put]
 func (h handler) UpdateArticle(c *gin.Context) {
 
@@ -176,9 +180,10 @@ func (h handler) UpdateArticle(c *gin.Context) {
 // @Tags        articles
 // @Accept      json
 // @Produce     json
-// @Param       id  path     string true "Article ID"
-// @Success     200 {object} models.JSONResponse{data=models.PackedArticleModel}
-// @Failure     400 {object} models.JSONErrorResponce
+// @Param       id            path     string true  "Article ID"
+// @Param       Authorization header   string false "authorization"
+// @Success     200           {object} models.JSONResponse{data=models.PackedArticleModel}
+// @Failure     400           {object} models.JSONErrorResponce
 // @Router      /v1/article/{id} [delete]
 func (h handler) DeleteArticle(c *gin.Context) {
 
